@@ -5,6 +5,7 @@ git-annex (0.11) UNRELEASED; urgency=low
   * Added remote.annex-rsync-options.
   * Avoid deleting temp files when rsync fails.
   * Improve detection of version 0 repos.
+  * Add uninit subcommand. Closes: #605749
 
  -- Joey Hess <joeyh@debian.org>  Thu, 02 Dec 2010 16:54:12 -0400
 
